--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "yeoman-generator"
   ],
   "devDependencies": {
-    "eslint": "^6.6.0",
+    "@babel/eslint-parser": "^7.19.1",
+    "eslint": "^7.32.0",
     "eslint-config-prettier": "^6.6.0",
     "eslint-config-xo": "^0.27.2",
     "eslint-plugin-prettier": "^3.1.1",
@@ -77,7 +78,7 @@
     "access": "public"
   },
   "scripts": {
-    "pretest": "eslint ./generators",
+    "lint": "eslint ./generators",
     "preversion": "npm run lint",
     "postversion": "git push && git push --tags",
     "version-patch": "npm version patch -m \"updated version to %s\"",
