updated scripts for unit tests

--- a/generators/app/templates/root/package.json
+++ b/generators/app/templates/root/package.json
@@ -8,16 +8,21 @@
     "lint:server": "tsc -p src/server",
     "build:server": "node build.js build",
     "build:server:release": "node build.js build --minify",
-    "build:client": "vite build src/client",
+    "build:client": "vite build src/client --mode development",
     "build": "npm run clean && npm run build:client && npm run lint:server && npm run build:server && npm run build:server:release",
     "start": "npm run build && node dist/app.js",
     "clean": "rimraf dist",
-    "clean:cov": "rimraf coverage",
-    "test:server": "TS_NODE_FILES=true TS_NODE_PROJECT=src/server/tsconfig.json mocha",
-    "test:server:cov": "npm run clean:cov && TS_NODE_FILES=true nyc mocha",
-    "coverage": "nyc report --reporter=text-lcov | coveralls",
+    "clean:cov": "rimraf coverage && rimraf .nyc_output",
+    "clean:server:cov": "rimraf coverage/server",
+    "clean:client:cov": "rimraf coverage/client",
+    "test:server": "TS_NODE_FILES=true TS_NODE_PROJECT='src/server/tsconfig.json' mocha --config 'src/server/.mocharc.js'",
+    "test:server:cov": "npm run clean:server:cov && TS_NODE_FILES=true TS_NODE_PROJECT='src/server/tsconfig.json' nyc --nycrc-path 'src/server/.nycrc.json' mocha --config 'src/server/.mocharc.js'",
+    "test:client": "TS_NODE_FILES=true TS_NODE_PROJECT='src/client/tsconfig.json' mocha --config 'src/client/.mocharc.js'",
+    "test:client:cov": "npm run clean:client:cov && TS_NODE_FILES=true TS_NODE_PROJECT='src/client/tsconfig.json' nyc --nycrc-path 'src/client/.nycrc.json' mocha --config 'src/client/.mocharc.js'",
+    "coverage:stage": "npm run clean:cov && npm run test:server:cov && npm run test:client:cov && nyc merge coverage/server .nyc_output/server-coverage-final.json && nyc merge coverage/client .nyc_output/client-coverage-final.json",
+    "coverage": "npm run coverage:stage && nyc report --reporter=text-lcov | coveralls",
     "lint": "eslint src/",
-    "prepublishOnly": "npm run build && npm run test:cov && npm run lint",
+    "prepublishOnly": "npm run build && npm run test:server:cov && npm run test:client:cov && npm run lint",
     "preversion": "npm run lint",
     "postversion": "git push && git push --tags",
     "version-patch": "npm version patch -m \"updated version to %s\"",
@@ -34,16 +39,17 @@
     "Express",
     "Vue"
   ],
-  "author": "Josh Walters",
+  "author": "<%= author %>",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "<%= gitUrl %>"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/bootstrap": "^5.2.6",
     "@types/chai": "^4.3.4",
+    "@types/chai-as-promised": "^7.1.5",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.15",
     "@types/jsonwebtoken": "^9.0.1",
@@ -55,9 +61,12 @@
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/compiler-sfc": "^3.2.45",
     "chai": "^4.3.7",
+    "chai-as-promised": "^7.1.1",
+    "coveralls": "^3.1.1",
     "esbuild": "^0.17.2",
     "eslint": "^8.31.0",
     "eslint-config-prettier": "^8.6.0",
+    "istanbul-merge": "^1.1.1",
     "mocha": "^10.2.0",
     "nyc": "^15.1.0",
     "rimraf": "^3.0.2",
