--- a/generators/app/templates/sourcecode/client/tsconfig.json
+++ b/generators/app/templates/sourcecode/client/tsconfig.json
@@ -11,6 +11,6 @@
       "@/*": ["src/*"]
     }
   },
-  "include": ["../client/src/**/*"],
-  "exclude": ["../client/public/**/*"]
+  "include": ["src/**/*.ts", "src/**/*.vue"],
+  "exclude": ["public/**/*", "*.js", "**/*.js"]
 }
