--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
   },
   "scripts": {
     "lint": "eslint ./generators",
+    "test": "npm run lint",
     "preversion": "npm run lint",
     "postversion": "git push && git push --tags",
     "version-patch": "npm version patch -m \"updated version to %s\"",
