--- a/generators/app/templates/_vscode/tasks.json
+++ b/generators/app/templates/_vscode/tasks.json
@@ -28,10 +28,32 @@
     {
       "type": "npm",
       "script": "vue:dev",
-      "group": "build",
-      "problemMatcher": [],
       "label": "Debug Vue",
-      "detail": "npx vite dev src/client --mode debug"
+      "detail": "npx vite dev src/client --mode debug",
+      "isBackground": true,
+      "problemMatcher": {
+        "fileLocation": "relative",
+        "pattern": {
+          "regexp": "_______",
+          "file": 1,
+          "location": 2,
+          "severity": 3,
+          "code": 4,
+          "message": 5
+        },
+        "background": {
+          "activeOnStart": true,
+          "beginsPattern": ">.vite",
+          "endsPattern": "..VITE.v.*?ms"
+        }
+      },
+      "presentation": {
+        "reveal": "never"
+      },
+      "group": {
+        "kind": "build",
+        "isDefault": true
+      }
     },
     {
       "type": "npm",
