fixed inquirer prop name (debugger not allowed)

--- a/generators/app/templates/_vscode/launch.json
+++ b/generators/app/templates/_vscode/launch.json
@@ -30,7 +30,7 @@
       "cwd": "${workspaceRoot}"
     },
     {
-      "type": "<%= debugger %>",
+      "type": "<%= browser %>",
       "request": "launch",
       "name": "Debug Vue",
       "url": "http://localhost:8000",
